# waypoint-backend

./: .gitignore  README.md  asgi.py  manage.py  pyproject.toml  settings.py  urls.py  wsgi.py
trips/: urls.py
trips/api/v1/: serializers.py  urls.py  views.py
trips/migrations/: 0001_initial.py  0002_country.py  0002_profile_role.py  0003_alter_profile_nationality.py  0004_alter_profile_nationality.py
trips/models/: __init__.py  countries.py  profile.py  trips.py
trips/scripts/: populate_test_data.py
trips/serializers/: __init__.py  countries.py  trips.py  users.py
trips/urls/: __init__.py  urls.py
trips/utils/: enums.py
trips/views/: __init__.py  countries.py  trips.py  users.py
waypoint-site/: settings.py  urls.py  views.py  wsgi.py
