[tool.poetry]
name = "waypoint-backend"
version = "0.1.0"
description = ""
authors = ["Evan Cortez <evanvcortez@gmail.com>", "Conner Owen <bigglesworth330@gmail.com>"]
readme = "README.md"
packages = [{include = "waypoint-site"}]

[tool.poetry.dependencies]
Django = "5.1.6"
django-allauth = "64.1.0"
django-cors-headers = "^4.0.0"
djangorestframework = "^3.13.1"
djangorestframework-api-key = "^3.0.0"
djangorestframework-simplejwt = "^5.1.0"
python = ">=3.10,<4.0.0"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.10"
dj-rest-auth = "^7.0.1"

[tool.poetry.scripts]
site = 'waypoint-site:main'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
